--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,67 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
 }
 
 * {
   box-sizing: border-box;
+  font-family: "Blogger", sans-serif;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+@font-face {
+  font-family: "Blogger";
+  font-weight: 300;
+  src: url("/fonts/Blogger/BloggerSans-Light.woff2") format("woff2");
 }
+
+@font-face {
+  font-family: "Blogger";
+  font-weight: 300;
+  font-style: italic;
+  src: url("/fonts/Blogger/BloggerSans-LightItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Blogger";
+  font-weight: 400;
+  src: url("/fonts/Blogger/BloggerSans-Normal.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Blogger";
+  font-weight: 400;
+  font-style: italic;
+  src: url("/fonts/Blogger/BloggerSans-NormalItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Blogger";
+  font-weight: 500;
+  src: url("/fonts/Blogger/BloggerSans-Medium.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Blogger";
+  font-weight: 500;
+  font-style: italic;
+  src: url("/fonts/Blogger/BloggerSans-MediumItalic.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Blogger";
+  font-weight: 700;
+  src: url("/fonts/Blogger/BloggerSans-Bold.woff2") format("woff2");
+}
+
+@font-face {
+  font-family: "Blogger";
+  font-weight: 700;
+  font-style: italic;
+  src: url("/fonts/Blogger/BloggerSans-BoldItalic.woff2") format("woff2");
+}
+
